# utils-cpp

./: .clang-format  .codechecker.json  CMakeLists.txt  LICENSE  License.txt  README.md
.github/workflows/: ci.yml
headers/: circularbuffer.h  declareptr.h  struct_ops.h  tuple_for_each.h
headers/utils-cpp/: algorithms.h  as_const.h  attributes.h  checkmethod.h  chrono_utils.h  circularbuffer.h  comparison_traits.h  container_utils.h  copy_move.h  cpuid.h  ctor.h  data_to_string.h  declareptr.h  default_ctor_ops.h  function_traits.h  functor_iterator.h  gtest_printers.h  lazy_init.h  lazyinit.h  macros.h  make_shared_from.h  make_shared_ptr.h  middle_iterator.h  objects-pool.h  objects_pool.h  once.h  overloaded.h  pimpl.h  safe_dynamic_cast.h  safe_integers.h  scoped_guard.h  shift.h  singleton.h  sios.h  stdin_listener.h  stdin_listener_native.h  string_hash.h  struct_ops.h  struct_ops2.h  struct_ops3.h  (+10 more)
headers/utils-cpp/Internal/: chassis_types.h  safe_integers_impl.h
src/: circularbuffer.cpp  cpuid.cpp  data_to_string.cpp  gtest_printers.cpp  objects-pool.cpp  objects_pool.cpp  sios.cpp  stdin_listener.cpp  stdin_listener_native.cpp  system_tools.cpp  threadid.cpp  vm_detector.cpp  xor.cpp
src/Internal/: chassis_types.cpp  system_tools_common.h  system_tools_linux.cpp  system_tools_macos.cpp  system_tools_win.cpp
tests/: CMakeLists.txt
tests/benchmark/: CMakeLists.txt  utils_cpp.cpp
tests/common/: CMakeLists.txt
tests/common/internal/: data_10kb.cpp  data_10kb.h
tests/test/: CMakeLists.txt  test01_declareptr.cpp  test02_lazy_init.cpp  test02_lazyinit.cpp  test03_struct_ops2.cpp  test04_comparison_traits.cpp  test05_as_const.cpp  test05_container_utils.cpp  test06_container_utils.cpp  test07_tuple_utils.cpp  test08_circular_buffer.cpp  test08_middle_iterator.cpp  test09_middle_iterator.cpp  test10_variant_eq.cpp  test10_variant_tools.cpp  test11_string_hash.cpp  test11_struct_ops3.cpp  test12_string_hash.cpp  test13_data_to_string.cpp  test14_safe_integers.cpp  test15_functor_iterator.cpp  test16_xor.cpp  test17_algorithms.cpp  test17_value_or.cpp  test18_system_tools.cpp  test19_vm_detector.cpp  test1_declareptr.cpp  test20_stdin_listener.cpp  test2_lazyinit.cpp  test3_struct_ops2.cpp  test4_container_utils.cpp  test5_tuple_utils.cpp  test6_circular_buffer.cpp  test7_variant_eq.cpp  test8_struct_ops3.cpp  test9_string_hash.cpp  test_00.cpp  test_entry_main.cpp
